# build-your-own

./: pyproject.toml
component_guides/docker/: 1. Docker Basics.ipynb  10. docker registry.ipynb  11. docker engine.ipynb  12. docker on different OS.ipynb  13. container orchestration.ipynb  2. Getting started.ipynb  3. docker run.ipynb  4. environment variables.ipynb  5. docker images.ipynb  6. cmd vs entrypoint.ipynb  7. docker networking.ipynb  8. docker storage.ipynb  9. docker compose.ipynb  README.md
component_guides/fastapi/: README.md  myapi.py  pyproject.toml
component_guides/html5/: README.md  cheatsheet.ipynb
component_guides/html5/01_lesson/: notes.ipynb
component_guides/html5/02_lesson/: index.html  main.css
component_guides/html5/03_lesson/: index.html
component_guides/kubernetes/: 1. K8s theory.ipynb  2. Starting with K8s.ipynb  3. Scaling with K8s.ipynb  README.md
component_guides/kubernetes/4. pushing to dockerhub/: 4. pushing to dockerhub.ipynb  package-lock.json  package.json
component_guides/kubernetes/5. yaml deployment/: 5. yaml deployment.ipynb  deployment.yaml  package-lock.json  service.yaml  webapp_to_nginx.yaml
component_guides/opentelemetry/: 1. intro.ipynb
component_guides/opentelemetry/opentelemetry-starting-out/: README.md  app.js  monitoring.js  package-lock.json  package.json  tracing.js
component_guides/postgres/: README.md
component_guides/react/: README.md  package-lock.json  package.json
component_guides/react/src/: App.js
guided_backend_apps/microservices python/: README.md
guided_backend_apps/microservices python/notes/: 1. architecture.ipynb  2. getting started.ipynb  3. auth notes.ipynb  4. gateway notes.ipynb  5. rabbitmq notes.ipynb
guided_backend_apps/microservices python/src/auth/: Dockerfile  server.py
guided_backend_apps/python api development/: README.md
guided_fullstack_apps/fastapi_react_chakra/: README.md
guided_fullstack_apps/fastapi_react_chakra/backend/: pyproject.toml
guided_fullstack_apps/fastapi_react_chakra/frontend/: package-lock.json  package.json
guided_fullstack_apps/react_fastapi/: README.md
guided_fullstack_apps/react_fastapi/api/: .env  app.py  database.sqlite3  database.sqlite3-shm  database.sqlite3-wal  models.py  pyproject.toml
guided_fullstack_apps/react_fastapi/front_end/: init  package-lock.json  package.json
slackbot-test/: docker-compose.yml  pyproject.toml
slackbot-test/frontend/: Dockerfile  pyproject.toml  ui.py
slackbot-test/slackbot/: slackbot.py  test2.ipynb
slackbot-test/slackbot/utils/: message_kit.py  secrets.py
(+14 files in other folders)
