[tool.poetry]
name = "freecodecamp - python api development"
version = "0.1.0"
description = ""
authors = ["yongjian.tek <yongjian.tek@grabtaxi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
ipykernel = "^6.29.4"
psycopg = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
