[tool.poetry]
name = "full-stack-react-fastapi"
version = "0.1.0"
description = ""
authors = ["yongjian.tek <yongjian.tek@grabtaxi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
tortoise-orm = "^0.21.3"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
